Changes for creeper

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,4 +1,5 @@
 name: BlockDecay
 version: ${project.version}
-author: LaxWasHere
+author: Kaspian
+api-version: 1.18
 main: net.poweredbyawesome.blockdecay.BlockDecay
